frontend/src/assets/styles/dashboard.scss
@import "bootstrap/scss/bootstrap";
@import "./main.scss";
.dashboard-cont{
  background: #d6d5d6 !important;
  .md-box{
    margin:20px auto;
    border-radius: 10px;
    box-shadow: 2px 2px 17px #8e8f91;
  }
  .card {
    width: 100%;
  }
  .card-body{
    background: #f8fff6;
  }
  .card-header{
    background: #dde2dc !important;
  }
  h5{
    background:#456509;
    color:#fff;
    padding: 10px;
    border-radius: 10px 10px 0 0;
  }
}
.user-logo {
  background-color: #f8f9fa; /* Light background */
  padding: 20px;
  border-radius: 10px;
  text-align: center;
  width: 200px; /* Fixed width for the logo box */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
}
.input-group{
  width: auto;
}
.data-table{
  tr{
    th{
      background: none;
      color: $white;
    }
  }
}
.list-table{
  background: #dde2dc;
  tr{
    th{
      color:#333;
    }
  }
}
.page-item{
  margin-right:10px;
  &.active{
    .page-link{
      border-radius: 300px;
      width: 40px;
      height: 40px;
      background: #456509; 
      color:$white;
    }
  }
  &:first-child, &:last-child{
    .page-link{
      border-radius: 30px;
    }
  }
  .page-link{
    border-radius: 300px;
    width: 40px;
    height: 40px;
    background: $dgrey; 
    color:#333;
  }
}
.gd-sys{
  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
  display:grid;
}
.user-avatar {
  background-color: #364E3F; /* Primary color for avatar */
  color: white;
  width: 70px;
  height: 70px;
  border-radius: 50%; /* Circular shape */
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
}
.transaction-box{
  div{
    form{
      label{
        width: 120px;
      }
    }
  }
}

.user-name {
  font-size: 18px;
  font-weight: bold;
  color:$black;
  margin: 0;
}

.user-role {
  font-size: 14px;
  color: #17863F; /* Muted text color */
  margin: 0;
}
.tab-links{
    display: flex;
    margin-bottom: 0;
   button{
    padding: 10px 20px;
    border: none;
    border-bottom: 4px solid #f1f1f1;
    cursor: pointer;
    background: transparent;
     &.active{
      border-bottom: 4px solid #47B749 !important;
      font-weight: 700;
     }
     &:hover {
      background-color: transparent;
    }
   }
 }
 .tab-content {
  border: 1px solid #ddd;
  padding: 1rem;
  border-radius: 5px;
  background-color: #f9f9f9;
  margin-bottom: 20px;
}

.product-table {
  width: 100%;
  border-collapse: collapse;

  th,
  td {
    border: 1px solid #ccc;
    padding: 10px;
    text-align: left;
  }

  th {
    background-color: #f9f9f9;
  }

  tbody tr:nth-child(even) {
    background-color: #f2f2f2;
  }
}

